--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<RelativeLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <ImageView
             android:id="@+id/detail_image_view"
@@ -63,16 +64,21 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/vote" />
         <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/trailer_list_view"
-            android:layout_below="@+id/detail_vote_average"/>
+            android:nestedScrollingEnabled="true"
+            android:layout_below="@+id/detail_vote_average"
+
+            tools:targetApi="lollipop" />
 
         <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/review_list_view"
-            android:layout_below="@id/trailer_list_view"/>
+            android:layout_below="@id/trailer_list_view"
+            android:nestedScrollingEnabled="true"
+            tools:targetApi="lollipop" />
 
 
 
