--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -2,25 +2,46 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/detail_image_view"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:contentDescription="@string/desc" />
+            android:id="@+id/listview_detail"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/detail_image_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:contentDescription="@string/desc" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mark_as_favouritess"
+                android:clickable="true"
+                android:textColor="@color/colorPrimary"
+                android:layout_gravity="center_vertical"
+                android:id="@+id/button"/>
+
+
+        </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/detail_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_image_view"
+            android:layout_below="@+id/listview_detail"
             android:layout_centerHorizontal="true"
             android:textSize="30sp"
             android:textStyle="bold" />
@@ -99,6 +120,8 @@
             android:layout_height="match_parent"
             android:layout_below="@id/review"
             tools:targetApi="lollipop" />
+
+
 
 
     </RelativeLayout>
