Enter Your API key

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -98,8 +98,8 @@
             android:textSize="20sp" />
 
 
-        <ListView
-            android:id="@+id/trailer_list_view"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycled_trailer_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/trailer"
@@ -109,13 +109,13 @@
             android:id="@+id/review"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/trailer_list_view"
+            android:layout_below="@+id/recycled_trailer_list_view"
             android:text="@string/review"
             android:textSize="20sp" />
 
 
-        <ListView
-            android:id="@+id/review_list_view"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycled_review_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/review"
