--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -1,8 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:id="@+id/list_item_trailer_textView">
 
-</TextView>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:elevation="4dp"
+    app:cardCornerRadius="@dimen/cardview_default_radius"
+    app:cardPreventCornerOverlap="true"
+    android:id="@+id/grid_item_trailer_cardView"
+    app:cardElevation="@dimen/cardview_default_elevation"
+    android:layout_margin="4dp">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:id="@+id/list_item_thumbnail_imageView"
+            tools:ignore="ContentDescription" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/playTrailerButtonImageView"
+            />
+
+
+    </RelativeLayout>
+
+
+
+
+</android.support.v7.widget.CardView>
