--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,128 +1,214 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<?xml version="1.0" encoding="utf-8"?>--><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--xmlns:app="http://schemas.android.com/apk/res-auto">-->
+
+
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content">-->
+
+<!--<LinearLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:id="@+id/listview_detail"--><!--android:orientation="horizontal">-->
+
+<!--<ImageView--><!--android:id="@+id/detail_image_view"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:padding="16dp"--><!--android:contentDescription="@string/desc" />-->
+
+<!--<Button--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="@string/mark_as_favouritess"--><!--android:clickable="true"--><!--android:textColor="@color/colorPrimary"--><!--android:layout_gravity="center_vertical"--><!--android:id="@+id/button"/>-->
+
+
+<!--</LinearLayout>-->
+
+
+<!--<TextView--><!--android:id="@+id/detail_title"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/listview_detail"--><!--android:layout_centerHorizontal="true"--><!--android:textSize="30sp"--><!--android:textStyle="bold" />-->
+
+<!--<TextView--><!--android:id="@+id/label_overview"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@id/detail_title"--><!--android:text="@string/overview"--><!--android:textSize="20sp" />-->
+
+<!--<TextView--><!--android:id="@+id/detail_overview"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/label_overview" />-->
+
+<!--<TextView--><!--android:id="@+id/release"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@id/detail_overview"--><!--android:text="@string/release_date"--><!--android:textSize="20sp" />-->
+
+<!--<TextView--><!--android:id="@+id/detail_release_date"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/release" />-->
+
+<!--<TextView--><!--android:id="@+id/vote"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/detail_release_date"--><!--android:text="@string/vote_average"--><!--android:textSize="20sp" />-->
+
+<!--<TextView--><!--android:id="@+id/detail_vote_average"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/vote" />-->
+
+
+<!--</RelativeLayout>--><!--</ScrollView>-->
+
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:fitsSystemWindows="true">
 
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/detail_backdrop_height"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/listview_detail"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/detail_image_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:contentDescription="@string/desc" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/mark_as_favouritess"
-                android:clickable="true"
-                android:textColor="@color/colorPrimary"
-                android:layout_gravity="center_vertical"
-                android:id="@+id/button"/>
-
-
-        </LinearLayout>
-
-
-
-        <TextView
-            android:id="@+id/detail_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/listview_detail"
-            android:layout_centerHorizontal="true"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/label_overview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/detail_title"
-            android:text="@string/overview"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/detail_overview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/label_overview" />
-
-        <TextView
-            android:id="@+id/release"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/detail_overview"
-            android:text="@string/release_date"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/detail_release_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/release" />
-
-        <TextView
-            android:id="@+id/vote"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_release_date"
-            android:text="@string/vote_average"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/detail_vote_average"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/vote" />
-
-
-        <TextView
-            android:id="@+id/trailer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_vote_average"
-            android:text="@string/trailer"
-            android:textSize="20sp" />
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycled_trailer_list_view"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/trailer"
-            tools:targetApi="lollipop" />
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-        <TextView
-            android:id="@+id/review"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/recycled_trailer_list_view"
-            android:text="@string/review"
-            android:textSize="20sp" />
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax" />
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycled_review_list_view"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/review"
-            tools:targetApi="lollipop" />
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            android:paddingTop="24dp">
+
+            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:elevation="4dp"
+                app:cardCornerRadius="@dimen/cardview_default_radius"
+                app:cardPreventCornerOverlap="true"
+                android:id="@+id/cardViewDetail"
+                app:cardElevation="@dimen/cardview_default_elevation"
+                android:layout_margin="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <android.support.v7.widget.AppCompatImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="4dp"
+                        android:id="@+id/poster" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_gravity="center"
+                        android:paddingLeft="16dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/release_date"
+                            android:fontFamily="sans-serif-condensed"
+                            android:textStyle="italic"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/vote_avg"
+                            android:fontFamily="sans-serif-condensed"
+                            android:textStyle="italic"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/vote_count"
+                            android:fontFamily="sans-serif-condensed"
+                            android:textStyle="italic"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/popularity"
+                            android:fontFamily="sans-serif-condensed"
+                            android:textStyle="italic"/>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="4dp"
+                app:cardCornerRadius="@dimen/cardview_default_radius"
+                app:cardPreventCornerOverlap="true"
+                android:id="@+id/overview"
+                android:layout_below="@+id/cardViewDetail"
+                app:cardElevation="@dimen/cardview_default_elevation"
+                android:layout_margin="8dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/overview_textView"
+                    android:padding="4dp"/>
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:id="@+id/trailer"
+                android:layout_below="@+id/overview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/trailer"
+                android:padding="8dp"
+
+                android:textStyle="bold"
+                android:fontFamily="sans-serif-condensed"/>
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycled_trailer_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/trailer"
+                tools:targetApi="lollipop" />
 
 
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycled_review_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/recycled_trailer_list_view"
+                tools:targetApi="lollipop" />
 
-    </RelativeLayout>
-</ScrollView>
+
+        </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/favorite"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|right|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:clickable="true"/>
+
+
+
+</android.support.design.widget.CoordinatorLayout>
