--- a/app/src/main/res/layout/grid_item_movies.xml
+++ b/app/src/main/res/layout/grid_item_movies.xml
@@ -7,7 +7,7 @@
     app:cardCornerRadius="@dimen/cardview_default_radius"
     app:cardElevation="@dimen/cardview_default_elevation"
     app:cardPreventCornerOverlap="true"
-    android:layout_margin="@dimen/activity_vertical_margin">
+    android:layout_margin="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
