--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -61,7 +61,8 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                android:src="@drawable/ic_favorite"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -82,100 +83,127 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            android:paddingTop="24dp">
+            android:paddingTop="24dp"
+            android:scrollbars="vertical">
 
             <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/cardViewDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_margin="8dp"
                 android:elevation="4dp"
                 app:cardCornerRadius="@dimen/cardview_default_radius"
-                app:cardPreventCornerOverlap="true"
-                android:id="@+id/cardViewDetail"
                 app:cardElevation="@dimen/cardview_default_elevation"
-                android:layout_margin="8dp">
+                app:cardPreventCornerOverlap="true">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/poster"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="4dp"
-                        android:id="@+id/poster" />
+                        android:fitsSystemWindows="true"
+                        android:src="@drawable/ic_favorite"/>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:paddingLeft="16dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"
+                        android:paddingTop="24dp"
+                        android:id="@+id/release_date"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center"
-                        android:paddingLeft="16dp">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/release_date"
-                            android:fontFamily="sans-serif-condensed"
-                            android:textStyle="italic"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/vote_avg"
-                            android:fontFamily="sans-serif-condensed"
-                            android:textStyle="italic"/>
+                        android:layout_toEndOf="@+id/poster"
+                        android:layout_toRightOf="@+id/poster"
+                        android:fontFamily="sans-serif-condensed"
+                        android:text="Release Data"
+                        android:textStyle="italic"
+                        />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/vote_count"
-                            android:fontFamily="sans-serif-condensed"
-                            android:textStyle="italic"/>
+                    <TextView
+                        android:id="@+id/vote_avg"
+                        android:paddingLeft="16dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/release_date"
+                        android:layout_toEndOf="@+id/poster"
+                        android:layout_toRightOf="@+id/poster"
+                        android:fontFamily="sans-serif-condensed"
+                        android:text="Vote Avg"
+                        android:textStyle="italic" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/popularity"
-                            android:fontFamily="sans-serif-condensed"
-                            android:textStyle="italic"/>
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/vote_count"
+                        android:paddingLeft="16dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/vote_avg"
+                        android:layout_toEndOf="@+id/poster"
+                        android:layout_toRightOf="@+id/poster"
+                        android:fontFamily="sans-serif-condensed"
+                        android:text="Vote Count"
+                        android:textStyle="italic" />
 
-                </LinearLayout>
+                    <TextView
+                        android:id="@+id/popularity"
+                        android:paddingLeft="16dp"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/vote_count"
+                        android:layout_toEndOf="@+id/poster"
+                        android:layout_toRightOf="@+id/poster"
+                        android:fontFamily="sans-serif-condensed"
+                        android:textStyle="italic"
+                        android:text="Popularity"
+                        android:paddingBottom="8dp"/>
+
+
+                </RelativeLayout>
 
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/overview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/cardViewDetail"
+                android:layout_margin="8dp"
                 android:elevation="4dp"
                 app:cardCornerRadius="@dimen/cardview_default_radius"
-                app:cardPreventCornerOverlap="true"
-                android:id="@+id/overview"
-                android:layout_below="@+id/cardViewDetail"
                 app:cardElevation="@dimen/cardview_default_elevation"
-                android:layout_margin="8dp">
+                app:cardPreventCornerOverlap="true">
 
                 <TextView
+                    android:id="@+id/overview_textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/overview_textView"
-                    android:padding="4dp"/>
+                    android:padding="4dp" />
 
             </android.support.v7.widget.CardView>
 
             <TextView
                 android:id="@+id/trailer"
-                android:layout_below="@+id/overview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/trailer"
+                android:layout_below="@+id/overview"
+                android:fontFamily="sans-serif-condensed"
                 android:padding="8dp"
 
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-condensed"/>
+                android:text="@string/trailer"
+                android:textStyle="bold" />
 
 
             <android.support.v7.widget.RecyclerView
@@ -184,7 +212,6 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trailer"
                 tools:targetApi="lollipop" />
-
 
 
             <android.support.v7.widget.RecyclerView
@@ -199,16 +226,14 @@
     </android.support.v4.widget.NestedScrollView>
 
 
-
     <android.support.design.widget.FloatingActionButton
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
         android:id="@+id/favorite"
-        app:layout_anchor="@id/appbar"
-        app:layout_anchorGravity="bottom|right|end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:clickable="true"/>
-
+        android:clickable="true"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|right|end" />
 
 
 </android.support.design.widget.CoordinatorLayout>
