--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,12 +8,12 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="2"/>
+        android:layout_height="match_parent" />
 
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/detail_container"
-        android:layout_weight="5"/>
-</LinearLayout>
+        android:layout_toRightOf="@+id/container"
+        android:layout_toEndOf="@+id/container"/>
+</RelativeLayout>
