Master Detail Flow not working

--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -20,16 +20,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
-            android:text="Author"
-
             android:textStyle="bold"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/list_item_review_content_textView"
             android:fontFamily="sans-serif"
-            android:textStyle="normal"
-            android:text="Trailer"/>
+            android:textStyle="normal" />
     </LinearLayout>
 
 
