--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,35 +1,3 @@
-<!--<?xml version="1.0" encoding="utf-8"?>--><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--xmlns:app="http://schemas.android.com/apk/res-auto">-->
-
-
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content">-->
-
-<!--<LinearLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:id="@+id/listview_detail"--><!--android:orientation="horizontal">-->
-
-<!--<ImageView--><!--android:id="@+id/detail_image_view"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:padding="16dp"--><!--android:contentDescription="@string/desc" />-->
-
-<!--<Button--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="@string/mark_as_favouritess"--><!--android:clickable="true"--><!--android:textColor="@color/colorPrimary"--><!--android:layout_gravity="center_vertical"--><!--android:id="@+id/button"/>-->
-
-
-<!--</LinearLayout>-->
-
-
-<!--<TextView--><!--android:id="@+id/detail_title"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/listview_detail"--><!--android:layout_centerHorizontal="true"--><!--android:textSize="30sp"--><!--android:textStyle="bold" />-->
-
-<!--<TextView--><!--android:id="@+id/label_overview"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@id/detail_title"--><!--android:text="@string/overview"--><!--android:textSize="20sp" />-->
-
-<!--<TextView--><!--android:id="@+id/detail_overview"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/label_overview" />-->
-
-<!--<TextView--><!--android:id="@+id/release"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@id/detail_overview"--><!--android:text="@string/release_date"--><!--android:textSize="20sp" />-->
-
-<!--<TextView--><!--android:id="@+id/detail_release_date"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/release" />-->
-
-<!--<TextView--><!--android:id="@+id/vote"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/detail_release_date"--><!--android:text="@string/vote_average"--><!--android:textSize="20sp" />-->
-
-<!--<TextView--><!--android:id="@+id/detail_vote_average"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_below="@+id/vote" />-->
-
-
-<!--</RelativeLayout>--><!--</ScrollView>-->
-
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -61,8 +29,7 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                android:src="@drawable/ic_favorite"/>
+                app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -108,8 +75,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="4dp"
-                        android:fitsSystemWindows="true"
-                        android:src="@drawable/ic_favorite"/>
+                        android:fitsSystemWindows="true" />
 
                     <TextView
                         android:paddingLeft="16dp"
@@ -122,7 +88,6 @@
                         android:layout_toEndOf="@+id/poster"
                         android:layout_toRightOf="@+id/poster"
                         android:fontFamily="sans-serif-condensed"
-                        android:text="Release Data"
                         android:textStyle="italic"
                         />
 
@@ -137,7 +102,6 @@
                         android:layout_toEndOf="@+id/poster"
                         android:layout_toRightOf="@+id/poster"
                         android:fontFamily="sans-serif-condensed"
-                        android:text="Vote Avg"
                         android:textStyle="italic" />
 
                     <TextView
@@ -151,7 +115,6 @@
                         android:layout_toEndOf="@+id/poster"
                         android:layout_toRightOf="@+id/poster"
                         android:fontFamily="sans-serif-condensed"
-                        android:text="Vote Count"
                         android:textStyle="italic" />
 
                     <TextView
@@ -166,7 +129,6 @@
                         android:layout_toRightOf="@+id/poster"
                         android:fontFamily="sans-serif-condensed"
                         android:textStyle="italic"
-                        android:text="Popularity"
                         android:paddingBottom="8dp"/>
 
 
