--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:theme="@style/AppTheme">
+    android:theme="@style/DetailAppTheme">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycled_grid_view"
