--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -1,43 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/grid_item_trailer_cardView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="8dp"
     android:elevation="4dp"
     app:cardCornerRadius="@dimen/cardview_default_radius"
-    app:cardPreventCornerOverlap="true"
-    android:id="@+id/grid_item_trailer_cardView"
     app:cardElevation="@dimen/cardview_default_elevation"
-    android:layout_margin="8dp">
+    app:cardPreventCornerOverlap="true">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:ignore="UseCompoundDrawables"
-        android:padding="4dp">
+        android:padding="4dp"
+        tools:ignore="UseCompoundDrawables">
 
         <ImageView
+            android:id="@+id/list_item_thumbnail_imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="fitCenter"
-            android:id="@+id/list_item_thumbnail_imageView"
-            tools:ignore="ContentDescription"
-            android:src="@drawable/ic_favorite"/>
+            android:src="@drawable/ic_favorite"
+            tools:ignore="ContentDescription" />
+
         <ImageView
+            android:id="@+id/playTrailerButtonImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:id="@+id/playTrailerButtonImageView"
-            android:src="@drawable/ic_play_arrow"
-            />
+            android:layout_centerVertical="true" />
 
 
     </RelativeLayout>
-
-
 
 
 </android.support.v7.widget.CardView>
