--- a/app/src/main/res/layout/grid_item_movies.xml
+++ b/app/src/main/res/layout/grid_item_movies.xml
@@ -1,38 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/grid_item_cardView"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/cardview_default_radius"
-    app:cardElevation="@dimen/cardview_default_elevation"
-    app:cardPreventCornerOverlap="true"
-    android:background="@drawable/touch_selector"
-    android:layout_margin="@dimen/card_margin">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/grid_item_cardView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="4dp"
-        tools:ignore="UseCompoundDrawables">
+        android:background="@drawable/touch_selector"
+        app:cardElevation="@dimen/card_view_elevation"
+        app:cardPreventCornerOverlap="false"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="16dp">
 
-
-        <ImageView
-            android:id="@+id/grid_item_imageview"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            android:layout_gravity="center" />
+            android:orientation="vertical"
+            android:padding="4dp"
+            tools:ignore="UseCompoundDrawables">
 
-        <TextView
-            android:id="@+id/grid_item_title_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed"/>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+
+            <ImageView
+                android:id="@+id/grid_item_imageview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:adjustViewBounds="true"
+                android:fitsSystemWindows="true" />
+
+            <TextView
+                android:id="@+id/grid_item_title_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-condensed"
+                android:gravity="center"
+                android:maxLength="15"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
