--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -5,9 +5,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/grid_item_review_cardView"
-    app:cardCornerRadius="@dimen/cardview_default_radius"
-    app:cardElevation="@dimen/cardview_default_elevation"
-    app:cardPreventCornerOverlap="true"
+    app:cardElevation="@dimen/card_view_elevation"
+    app:cardPreventCornerOverlap="false"
     android:layout_margin="8dp">
 
     <LinearLayout
