--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -7,10 +7,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:elevation="4dp"
-    app:cardCornerRadius="@dimen/cardview_default_radius"
-    app:cardElevation="@dimen/cardview_default_elevation"
-    app:cardPreventCornerOverlap="true">
+    app:cardElevation="@dimen/card_view_elevation"
+    app:cardPreventCornerOverlap="false">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -31,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:adjustViewBounds="true"
             android:layout_centerVertical="true" />
 
 
